# ds_tech_task

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  start_api.sh  strategic_reflections.md
model_pipeline/: data_preprocessing.py  model_evaluation.py  model_training.py  prediction_service.py
model_pipeline/utils/: model_utils.py
notebooks/: create_sql_tables.ipynb  exploratory_data_analysis.ipynb  model_explainability.ipynb  modelo_completo_pipeline.ipynb
reports/: EDA_report.md  deployment_guide.md  error_insights.md  explainability.md  model_notes.md  next_steps.md  strategic_reflections.md
sql/: sql_insights.md  sql_queries.sql
src/: client_example.py  config.py  main.py  middleware.py  test_api.py  utils.py
