[project]
name = "ds-tech-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.2"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pydantic>=2.11.7",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "shap>=0.48.0",
    "xgboost>=3.0.2",
]
